fix for overflow on iOS browsers

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,17 @@
 @import '~slick-carousel/slick/slick.css';
 @import '~slick-carousel/slick/slick-theme.css';
 
+html,
 body {
+  overflow: hidden;
+}
+
+body {
+  position: fixed; // Fixes unwanted scrolling on iOS browsers.
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   margin: 0;
   padding: 0;
   font-family: rockwell, -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
